All three ways are in, needs formatting